Fixed bounce animation, removed horizontal scroll, and changed bike parking availability charts' title

--- a/Flask/static/Style.css
+++ b/Flask/static/Style.css
@@ -287,6 +287,7 @@ body
     color: #333;
     height: 80vh;
     overflow-y: auto;
+    overflow-x: hidden;
 }
 
 /* styling for station name container */
